Fix text alignment
added to custom.css to center text on item card

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -8,3 +8,11 @@
   max-height: 200px;
   display: block;
 }
+
+.centered {
+  position: absolute;
+  /*left: 50%;*/
+  top: 40%;
+  width: 80%;
+  text-align: center;
+}
